Adicionado arquivo readme.md

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="home">
             <section>
                 <h1> Desenvolvedor Web e Mobile </h1>
-                <h2>Melhorando o <span>Design</span> de sua empresa</h2>
+                <h2>Melhorando o <span>Design</span> da sua empresa</h2>
             </section>
         </div>
 
@@ -52,12 +52,7 @@
         <article>
             
         </article>
-
     </main>
-
-
-    <footer>
-
         <div>
             <aside class="newslatter">
                 <div>
@@ -66,7 +61,7 @@
                     <p>e receba nossa atualizações</p>
                 </div>
                 <div>
-                    <form action="">
+                    <form action="" class="form-newslatter">
                         <input type="text" placeholder="Nome">
                         <input type="email" placeholder="E-mail">
                         <input type="submit" value="enviar">
@@ -75,6 +70,10 @@
             </aside>
         </div>
 
+    
+
+
+    <footer>
         <section class="rodape-contato">
             <div>
                 <h1>
