alterações na pagina home troca de texto e add icons de midias sociais

--- a/orcamento.html
+++ b/orcamento.html
@@ -16,7 +16,7 @@
     <section>
         <div class="formulario">
             
-            <h1>Orçamento</h1>
+            <h1>Formulário de Orçamento</h1>
                 <input type="text" name="nome" placeholder="Nome">
                 <input type="text" name="sobrenome" placeholder="Sobrenome">
                 <div class="idade-sexo">
