--- a/index.html
+++ b/index.html
@@ -44,8 +44,18 @@
     <main>
         <div id="home">
             <section>
-                <h1> Desenvolvedor Web e Mobile </h1>
+                <h1> Web Developer | UI/UX Design </h1>
                 <h2>Melhorando o <span>Design</span> da sua empresa</h2>
+                <div>
+                    <ul class="icon-redes-sociais">
+                        <!-- <li><a href="#"><img src="imagens/whatsapp.png" alt="whatsapp" width="50px" height="50px"></li></a> -->
+                        <li><a href="#"><img src="imagens/linkedin.png" alt="linkedin" width="50px" height="50px"></li></a>
+                        <li><a href="#"><img src="imagens/facebook.png" alt="facebook" width="50px" height="50px"></li></a>
+                        <li><a href="#"><img src="imagens/instagram.png" alt="instagram" width="50px" height="50px"></li></a>
+                    </ul>
+
+                </div>
+                
             </section>
         </div>
 
