adicionado frase sobre nivek design

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <aside id="ui-ux">
                     <article class="ui">
                         <h1>Sobre a Nivek Design</h1>
-                        <h2>Tem como principal foco a interface de um determinado aplicativo ou site </h2>
+                        <h2>Somos uma empresa que atua na criação e design de sites e aplicativos </h2>
                         
                     </article>
                     <article class="ux">
