--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="home">
             <div>
                 <h1> Web Developer | UI/UX Design </h1>
-                <h2>Desenvolvendo e inovando o <span>Design</span> </h2>
+                <h2>Desenvolvendo e inovando <span>Sites e Aplicativos    </span> </h2>
                 <div>
                     <ul class="icon-redes-sociais">
                         <!-- <li><a href="#"><img src="imagens/whatsapp.png" alt="whatsapp" width="50px" height="50px"></li></a> -->
@@ -64,8 +64,9 @@
 
         <div class="mobile">
             <div class="text-mobile">
-                <h1>Mobile</h1>
-                <h2>Projetamos e Desenvolvemos Aplicativos </h2>
+                <h1>app Mobile</h1>
+                <h2>Projetamos Aplicativos </h2>
+                <h3>Desenvolvemos soluções na criação de aplicativos iOs e Android para os mais variados tipos de segmentos.</h3>
             </div>
             <div class="img-mobile">
         </div>
